[tool.poetry]
name = "lle-mock"
version = "0.1.0"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"
packages = [{include = "lle_mock"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
